[fix] - fix swagger
